# chroma-reasoner

./: .gitignore  README.md  pyproject.toml
docs/: phase0.md  phase1.md  phase2.md  phase3.md  phase4.md
examples/plans/: melancholic_1910s_seaside.json
examples/plans/phase2/: 000000000139.json  000000001000.json  000000002299.json  000000010092.json  000000022755.json
kb/: modifiers.yaml  objects.yaml
notebooks/: lcad_baseline_colab.ipynb  phase2_masks_colab.ipynb  phase4_reasoner_colab.ipynb
plans/reasoned/: 000000001000.json  000000002299.json  000000022755.json
schemas/: color_plan.schema.json
scripts/: download_coco_subset.py  evaluate.py  kb_resolve.py  reason_plan.py  render_naive.py  run_ddcolor.py  validate_plan.py
src/chroma_reasoner/baselines/: ddcolor.py
src/chroma_reasoner/data/: coco_subset.py  grayscale.py
src/chroma_reasoner/kb/: __init__.py  engine.py  store.py
src/chroma_reasoner/metrics/: __init__.py  clip_score.py  colorfulness.py  evaluate.py  hue_invariant.py
src/chroma_reasoner/plan/: __init__.py  adherence.py  colors.py  hints.py  masks.py  schema.py
src/chroma_reasoner/reasoner/: __init__.py  backend.py  backend_open.py  planner.py  prompts.py  selection_schema.py
tests/: test_backend_open.py  test_colors.py  test_kb.py  test_metrics.py  test_phase2_pipeline.py  test_plan_schema.py  test_reasoner.py
